<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.coin.CoinActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ProgressBar
                android:id="@+id/coinProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgCoinDetail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/txtCoinNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:text="@string/coin_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtCoinMarketCap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/coin_description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtCoinPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/coin_price"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txtCoinPriceLow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/low_price"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txtCoinPriceHigh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/high_price"
                android:textSize="16sp" />
            <TextView
                android:id="@+id/txtCoinPricePercentChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Coin Price"
                android:textSize="16sp" />
            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/api"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>